Fixed spacings on results page

--- a/src/css/results.css
+++ b/src/css/results.css
@@ -31,6 +31,12 @@
 }
 
 @media (max-width: 1250px) {
+    #results header .expand, #results header .close {
+        visibility: visible;
+    }
+}
+
+@media (max-width: 800px) {
     #results {
         padding: 5px;
     }
@@ -42,9 +48,5 @@
     #results header {
         padding: 15px;
         font-size: 80%;
-    }
-
-    #results header .expand, #results header .close {
-        visibility: visible;
     }
 }
